--- a/clone-nextLevel/index.html
+++ b/clone-nextLevel/index.html
@@ -1,40 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="cursor">
-        <div class="cursor-default">
-            <span class="cursor-default-inner"></span>
-        </div>
-        <div class="cursor-trace">
-            <span class="cursor-trace-inner"></span>
-        </div>
+      <div class="cursor-default">
+        <span class="cursor-default-inner"></span>
+      </div>
+      <div class="cursor-trace">
+        <span class="cursor-trace-inner"></span>
+      </div>
     </div>
-      
+
     <section class="preloader shown-area">
-        <button class="preloader__btn">
-            <span class="preloader__btn_hold">Hold</span>
-        </button>
+      <button class="preloader__btn">
+        <span class="preloader__btn_hold">Hold</span>
+      </button>
     </section>
 
     <section class="header hidden-area">
-        <span class="circle" id="circle-1"></span>
-        <span class="circle" id="circle-2"></span>
-        <img id="cube__image_1" src="https://raw.githubusercontent.com/Han-Kyeol/interactive-web-lecture/main/interactive_web_code/Chapter%205/images/Lovepik_com-401467010-cube.png" alt="cube image" class="cube__image">
-        <img id="cube__image_2" src="https://raw.githubusercontent.com/Han-Kyeol/interactive-web-lecture/main/interactive_web_code/Chapter%205/images/Lovepik_com-401467010-cube.png" alt="cube image" class="cube__image">
-        <img id="cube__image_3" src="https://raw.githubusercontent.com/Han-Kyeol/interactive-web-lecture/main/interactive_web_code/Chapter%205/images/Lovepik_com-401467010-cube.png" alt="cube image" class="cube__image">
-        <img id="cube__image_4" src="https://raw.githubusercontent.com/Han-Kyeol/interactive-web-lecture/main/interactive_web_code/Chapter%205/images/Lovepik_com-401467010-cube.png" alt="cube image" class="cube__image">
-        <h1 class="header__title">
-          <div>LAST ART</div>
-          <div>PROJECTS</div>
-        </h1>
+      <span class="circle" id="circle-1"></span>
+      <span class="circle" id="circle-2"></span>
+      <img
+        id="cube__image_1"
+        src="https://raw.githubusercontent.com/Han-Kyeol/interactive-web-lecture/main/interactive_web_code/Chapter%205/images/Lovepik_com-401467010-cube.png"
+        alt="cube image"
+        class="cube__image"
+      />
+      <img
+        id="cube__image_2"
+        src="https://raw.githubusercontent.com/Han-Kyeol/interactive-web-lecture/main/interactive_web_code/Chapter%205/images/Lovepik_com-401467010-cube.png"
+        alt="cube image"
+        class="cube__image"
+      />
+      <img
+        id="cube__image_3"
+        src="https://raw.githubusercontent.com/Han-Kyeol/interactive-web-lecture/main/interactive_web_code/Chapter%205/images/Lovepik_com-401467010-cube.png"
+        alt="cube image"
+        class="cube__image"
+      />
+      <img
+        id="cube__image_4"
+        src="https://raw.githubusercontent.com/Han-Kyeol/interactive-web-lecture/main/interactive_web_code/Chapter%205/images/Lovepik_com-401467010-cube.png"
+        alt="cube image"
+        class="cube__image"
+      />
+      <h1 class="header__title">
+        <div>LAST ART</div>
+        <div>PROJECTS</div>
+      </h1>
     </section>
     <script type="module" src="index.js"></script>
-</body>
+  </body>
 </html>
