--- a/mini-game/index.html
+++ b/mini-game/index.html
@@ -14,6 +14,7 @@
     <img src="./assets/bg1.png" id="bg1-img" class="asset-img" />
     <img src="./assets/bg2.png" id="bg2-img" class="asset-img" />
     <img src="./assets/bg3.png" id="bg3-img" class="asset-img" />
+    <img src="./assets/Wall.png" id="wall-img" class="asset-img" />
     <canvas></canvas>
     <script type="module" src="./index.js"></script>
   </body>
